replica-deployment.yaml
apiVersion: app/v1
kind: StatefulSet
metadata:
  name: mysql-replica
  namespace: mysql
  labels:
    app: mysql-replica

spec:
  revisionHistoryLimit: 3
  serviceName: mysql-svc
  selector:
    matchLabels:
      app: mysql-replica
  updateStrategy: rollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mysql-replica
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql-replica
        image: mysql:8.0.33

        resources:
          limits:
            cpu: 512m
          requests:
            cpu: 312m
