argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  labels:
    name: argocd-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"


spec:
  rules:
  - host: argo.test.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
